gcc/testsuite/rust/compile/macros/mbe/macro-issue1395-2.rs
// { dg-additional-options "-frust-edition=2018" }
#![feature(no_core)]
#![no_core]


macro_rules! try {
    // { dg-error "expecting .identifier. but .try. found" "" { target *-*-* } .-1 }
    () => {};
}
